# mesh-optimization-with-3D-building-lines

./: LICENSE.txt  README.md
C++/: CMakeLists.txt
C++/include/: class.h  dist.h  file.h  initialNormal.h  lineProcess.h  meshOper.h  myMath.h  region.h  retriangulate.h
C++/src/: dist.cpp  file.cpp  initialNormal.cpp  lineProcess.cpp  main.cpp  meshOper.cpp  myMath.cpp  region.cpp  remeshing.cpp  retriangulate.cpp
matlab/: main.m
matlab/Algorithm/DP_reconstruct_AW/: DP_PR_ours.m  DP_reconstruct_ours.m  getWeight.m  reconstruct_ours.m
matlab/Algorithm/DP_reconstruct_probability/: DP_ploygonReconstruct.m  DP_reconstruct.m  getWeight.m  reconstruct.m
matlab/Algorithm/file/: readLineOBJ.m  readMeshOBJ.m  writeLineOBJ.m  writeMeshOBJ.m  writePointOBJ.m
matlab/Algorithm/line_process/: getNode.m  lineSort.m
matlab/Algorithm/math/: LineEquation.m  crossProduct.m  getLineAngle.m  getNeighKidx.m  getQuantile.m  getTriArea.m  getVecAngle.m  intersectSection.m
matlab/Algorithm/mesh_oper/: createPFneighbor.m  facepointUpdate.m  findCertainNeighFace.m  findConnectEdge.m  findConnectRegion.m  findEdgeNeighFace.m  findPointNeighFace.m  getFaceEdge.m  getFacesNormal.m  getOutlineSort.m  getPointNeighFace.m  getRegionArea.m  getRegionLength.m  getRegionPE.m  haveConstrainedEdge.m  isExistLine.m  isExistPoint.m  isInTri.m  regionFaceNormalAngle.m
matlab/Algorithm/region/: IsIntersectant.m  getKnnFace.m  holeFilling.m  regionConnect.m  regionExtend.m  regionGrowth.m  regionSegment.m  shapeRepair.m
